--- a/source/index.html
+++ b/source/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html class="page page--nojs" lang="ru">
 
-@@include('html/head.html',{
-'title':'Портфолио фронтенд-разработчика'
-})
+<head>
+  <meta charset="utf-8" />
+  <title>Портфолио</title>
+  <meta name="description" content="Портфолио Розова ЯС">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preload" href="fonts/Jost-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Jost-Regular.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Jost-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Jost-Medium.woff" as="font" type="font/woff" crossorigin="anonymous">
+</head>
 
 <body class="body page__body">
-  @@include('html/header.html',{})
+  <header class="header page__header">
+    <div class="header__container">
+      <h1 class="title main-title header__title">Резюме</h1>
+      <div class="header__back"></div>
+      <nav class="navigation navigation--nojs navigation--closed header__menu">
+        <button class="button navigation__toggle header__burger" type="button" aria-expanded="false"
+          aria-controls="navigation__list">
+          <span class="visually-hidden">Открыть меню </span>
+        </button>
+        <ul class="list navigation__list" id="navigation__list">
+          <li class="navigation__item">
+            <a class="link navigation__link" href="#skills">Основные навыки</a>
+          </li>
+          <li class="navigation__item">
+            <a class="link navigation__link" href="#portfolio">Портфолио</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <main class="main page__main">
     <section class="about main__about">
       <div class="container">
         <header class="about__header">
           <div class="about__image-block">
             <picture>
-              <source type="image/webp" srcset="@img/iam.webp 1x, @img/iam@2x.webp 2x">
-              <img class="img" src="@img/iam.jpg" srcset="@img/iam@2x.jpg 2x" width="92" height="92"
+              <source type="image/webp" srcset="img/iam.webp 1x, img/iam@2x.webp 2x">
+              <img class="img" src="img/iam.jpg" srcset="img/iam@2x.jpg 2x" width="92" height="92"
                 alt="Розова Яна Сергеевна" />
             </picture>
           </div>
@@ -52,7 +78,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж HTML"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#html-icon"></use>
+                  <use xlink:href="img/sprite.svg#html-icon"></use>
                 </svg>
               </div>
               <p class="text ">html</p>
@@ -61,7 +87,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#css-icon"></use>
+                  <use xlink:href="img/sprite.svg#css-icon"></use>
                 </svg>
               </div>
               <p class="text ">css</p>
@@ -70,7 +96,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж JS"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#js-icon"></use>
+                  <use xlink:href="img/sprite.svg#js-icon"></use>
                 </svg>
               </div>
               <p class="text ">js</p>
@@ -79,7 +105,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="29" height="22" role="img" aria-label="Бейдж SCSS"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#scss-icon"></use>
+                  <use xlink:href="img/sprite.svg#scss-icon"></use>
                 </svg>
               </div>
               <p class="text ">scss</p>
@@ -90,7 +116,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="23" height="23" role="img" aria-label="Бейдж COREL DRAW"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#corel-icon"></use>
+                  <use xlink:href="img/sprite.svg#corel-icon"></use>
                 </svg>
               </div>
               <p class="text ">corel draw</p>
@@ -99,7 +125,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="15" height="23" role="img" aria-label="Бейдж FIGMA"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#figma-icon"></use>
+                  <use xlink:href="img/sprite.svg#figma-icon"></use>
                 </svg>
               </div>
               <p class="text ">figma</p>
@@ -108,7 +134,7 @@
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="23" height="23" role="img" aria-label="Бейдж PHOTOSHOP"
                   focusable="false">
-                  <use xlink:href="@img/sprite.svg#ps-icon"></use>
+                  <use xlink:href="img/sprite.svg#ps-icon"></use>
                 </svg>
               </div>
               <p class="text ">photoshop</p>
@@ -125,7 +151,8 @@
         </p>
         <p class="text skills__text">
           Знание программ пакета Office. Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа
-          на&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. Работала в качестве "администратора печатного участка" более 7 лет.
+          на&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. Работала в качестве "администратора печатного
+          участка" более 7 лет.
         </p>
         <p class="text skills__text">
           <em>Уровень владения компьютером: </em> продвинутый пользователь.
@@ -148,146 +175,81 @@
             <span class="visually-hidden">К следующему слайду</span>
           </button>
           <div class="swiper slider__image-block">
-            <ul class="list swiper-wrapper swiper-wrapper--image">
-              <li class="swiper-slide">
-                <picture>
-                  <source type="image/webp" media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-keksobooking-tablet.webp 1x, @img/portfolio/site-pre-keksobooking-tablet@2x.webp 2x">
-                  <source type="image/webp"
-                    srcset="@img/portfolio/site-pre-keksobooking.webp 1x, @img/portfolio/site-pre-keksobooking.webp 2x">
-                  <source media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-keksobooking-tablet.png 1x, @img/portfolio/site-pre-keksobooking-tablet@2x.png 2x">
-                  <img class="img slider__img" src="@img/portfolio/site-pre-keksobooking.png"
-                    srcset="@img/portfolio/site-pre-keksobooking@2x.png 2x" width="280" height="186"
-                    alt="Демонстрация сайта Kekesobooking" />
-                </picture>
-              </li>
-              <li class="swiper-slide">
-                <picture>
-                  <source type="image/webp" media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-cat-tablet.webp 1x, @img/portfolio/site-pre-cat-tablet@2x.webp 2x">
-                  <source type="image/webp"
-                    srcset="@img/portfolio/site-pre-cat.webp 1x, @img/portfolio/site-pre-cat@2x.webp 2x">
-                  <source media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-cat-tablet.png 1x, @img/portfolio/site-pre-cat-tablet@2x.png 2x">
-                  <img class="img slider__img" src="@img/portfolio/site-pre-cat.png"
-                    srcset="@img/portfolio/site-pre-cat@2x.png 2x" width="280" height="186"
-                    alt="Демонстрация сайта Cat Energy" />
-                </picture>
-              </li>
-              <li class="swiper-slide">
-                <picture>
-                  <source type="image/webp" media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-technomart-tablet.webp 1x, @img/portfolio/site-pre-technomart-tablet@2x.webp 2x">
-                  <source type="image/webp"
-                    srcset="@img/portfolio/site-pre-technomart.webp 1x, @img/portfolio/site-pre-technomart@2x.webp 2x">
-                  <source media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-technomart-tablet.png 1x, @img/portfolio/site-pre-technomart-tablet@2x.png 2x">
-                  <img class="img slider__img" src="@img/portfolio/site-pre-technomart.png"
-                    srcset="@img/portfolio/site-pre-technomart@2x.png 2x" width="280" height="186"
-                    alt="Демонстрация сайта Техномарт" />
-                </picture>
-              </li>
-              <li class="swiper-slide">
-                <picture>
-                  <source type="image/webp" media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-playtennis-tablet.webp 1x, @img/portfolio/site-pre-playtennis-tablet@2x.webp 2x">
-                  <source type="image/webp"
-                    srcset="@img/portfolio/site-pre-playtennis.webp 1x, @img/portfolio/site-pre-playtennis@2x.webp 2x">
-                  <source media="(min-width:768px)"
-                    srcset="@img/portfolio/site-pre-playtennis-tablet.png 1x, @img/portfolio/site-pre-playtennis-tablet@2x.png 2x">
-                  <img class="img slider__img" src="@img/portfolio/site-pre-playtennis.png"
-                    srcset="@img/portfolio/site-pre-playtennis.png 2x" width="280" height="186"
-                    alt="Демонстрация сайта Play ТЕННИС" />
-                </picture>
-              </li>
+            <ul class="list swiper-wrapper slider__image-wrapper">
+
             </ul>
           </div>
           <div class="swiper-pagination slider__pagination"></div>
           <div class="swiper slider__description-block">
-            <ul class="list slider__description-wrapper swiper-wrapper">
-              <li class="swiper-slide slider__description-item">
-                <h4 class="title subtitle">Сайт для сервиса <span class="project-name">&laquo;keksobooking&raquo;</span>
-                </h4>
-                <div class="slider__text-block">
-                  <p class="text slider__text">
-                    Реализован в&nbsp;процессе обучения на&nbsp;курсе <br>&laquo;JavaScript. Профессиональная разработка веб-интерфейсов&raquo; <br> в&nbsp;
-                    <a class="link text-link" href="https://htmlacademy.ru/" title="Сайт HTML Academy">
-                      HTML&nbsp;Academy
-                    </a> (без наставника).
-                  </p>
-                  <p class="text slider__text">
-                    Реализованы возможности получения и отправки данных объявлений с сервера, так же предусмотрено состояние, если возникли ошибки работы с сервером.
-                    Полученные данные отрисовываются в балунах к меткам карты, имеется возможность фильтрации объявлений по заданным параметрам.
-                    Осуществляется валидация формы.
-                    Использованы библиотеки leaflet, lodash. Сборка проекта реализована с помощью webpack.
-                  </p>
-                </div>
-                <a class="link button-preview slider__button" target="_blank"
-                  href="https://chiprose.github.io/Keksobooking/" title="Просмотреть опубликованный сайт">Открыть сайт
-                </a>
-              </li>
-              <li class="swiper-slide slider__description-item">
-                <h4 class="title subtitle">Сайт для интернет-магазина <span class="project-name">&laquo;Cat
-                    energy&raquo;</span>
-                </h4>
-                <div class="slider__text-block">
-                  <p class="text slider__text">
-                    Реализован в&nbsp;процессе обучения на&nbsp;курсе адаптивной вёрстки и автоматизации в&nbsp;
-                    <a class="link text-link" href="https://htmlacademy.ru/" title="Сайт HTML Academy">
-                      HTML&nbsp;Academy
-                    </a> (без наставника).
-                  </p>
-                  <p class="text slider__text">Адаптивен для разных устройств, адаптивная и оптимизированная
-                    графика, svg, спрайт. Использованы Flex, Grid, препроцессор SCSS, сборщик Gulp. Имеет меню-бургер,
-                    слайдер.
-                  </p>
-                </div>
-                <a class="link button-preview slider__button" target="_blank"
-                  href="https://chiprose.github.io/Cat-energy/" title="Просмотреть опубликованный сайт">Открыть сайт
-                </a>
-              </li>
-              <li class="swiper-slide slider__description-item">
-                <h4 class="title subtitle">Сайт для интернет-магазина <span
-                    class="project-name">&laquo;Техномарт&raquo;</span>
-                </h4>
-                <div class="slider__text-block">
-                  <p class="text slider__text">
-                    Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;
-                    <a class="link text-link" href="https://htmlacademy.ru/"
-                      title="Сайт HTML Academy">HTML&nbsp;Academy</a>
-                  </p>
-                  <p class="text slider__text">
-                    Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры,
-                    работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность
-                    для&nbsp;скринридеров.
-                  </p>
-                </div>
-                <a class="link button-preview slider__button" target="_blank"
-                  href="https://chiprose.github.io/Technomart/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
-              </li>
-              <li class="swiper-slide slider__description-item">
-                <h4 class="title subtitle">Сайт для теннисного клуба
-                  <span class="project-name">&laquo;Play ТЕННИС&raquo;</span>
-                </h4>
-                <div class="slider__text-block">
-                  <p class="text slider__text">Реализован по собственному проекту.</p>
-                  <p class="text slider__text">Адаптивен для разных устройств. Использованы Flex. Имеет
-                    меню-бургер, слайдер с
-                    фотогалереей, спойлеры, табы.
-                  </p>
-                </div>
-                <a class="link button-preview slider__button" target="_blank"
-                  href="https://chiprose.github.io/PlayTennis/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
-              </li>
+            <ul class="list swiper-wrapper slider__description-wrapper">
+
             </ul>
           </div>
         </div>
       </div>
     </section>
   </main>
-  @@include('html/footer.html',{})
-  <script src="js/main.min.js"></script>
+  <footer class="footer page__footer">
+    <div class="container footer__container">
+      <a class="link footer__link" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">
+        <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
+          <use xlink:href="img/sprite.svg#github-icon"></use>
+        </svg>
+        GitHub
+      </a>
+      <a class="link footer__link" href="tel:+79604608234" title="Позвонить Frontend-разработчику">
+        <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
+          <use xlink:href="img/sprite.svg#phone-icon"></use>
+        </svg>
+        +7 960 460 8 234
+      </a>
+      <p class="text">
+        ©Yana Rozova
+      </p>
+    </div>
+  </footer>
+  <!-- Slide image block template -->
+  <template id="slide-image">
+    <li class="swiper-slide slider__image-item">
+      <picture>
+        <source type="image/webp" media="(min-width:768px)" id="image-webp-tablet"
+          srcset="img/portfolio/site-pre-keksobooking-tablet.webp 1x, img/portfolio/site-pre-keksobooking-tablet@2x.webp 2x">
+        <source type="image/webp" id="image-webp"
+          srcset="img/portfolio/site-pre-keksobooking.webp 1x, img/portfolio/site-pre-keksobooking@2x.webp 2x">
+        <source media="(min-width:768px)" id="image-png-tablet"
+          srcset="img/portfolio/site-pre-keksobooking-tablet.png 1x, img/portfolio/site-pre-keksobooking-tablet@2x.png 2x"> 
+        <img class="img slider__img" src="img/portfolio/site-pre-keksobooking.png"
+          srcset="img/portfolio/site-pre-keksobooking@2x.png 2x" width="280" height="186"
+          alt="Демонстрация сайта Kekesobooking" />
+      </picture>
+    </li>
+  </template>
+  <!-- Slide text block template -->
+  <template id="slide-text">
+    <li class="swiper-slide slider__description-item">
+      <h4 class="title subtitle">Сайт для сервиса</h4>
+      <div class="slider__text-block">
+        <p class="text slider__text">
+          Реализован в&nbsp;процессе обучения на&nbsp;курсе <br>&laquo;JavaScript. Профессиональная разработка
+          веб-интерфейсов&raquo; <br> в&nbsp;
+          <a class="link text-link" href="https://htmlacademy.ru/" title="Сайт HTML Academy">
+            HTML&nbsp;Academy
+          </a> (без наставника).
+        </p>
+        <p class="text slider__text">
+          Реализованы возможности получения и отправки данных объявлений с сервера, так же предусмотрено состояние, если
+          возникли ошибки работы с сервером.
+          Полученные данные отрисовываются в балунах к меткам карты, имеется возможность фильтрации объявлений по
+          заданным параметрам.
+          Осуществляется валидация формы.
+          Использованы библиотеки leaflet, lodash. Сборка проекта реализована с помощью webpack.
+        </p>
+      </div>
+      <a class="link button-preview slider__button" target="_blank" href="https://chiprose.github.io/Keksobooking/"
+        title="Просмотреть опубликованный сайт">Открыть сайт
+      </a>
+    </li>
+  </template>
 </body>
 
 </html>
